# _sbd

Indeksowo-sekwencyjna organizacja pliku/SBDProject2/: pom.xml  test  test2  test3
Indeksowo-sekwencyjna organizacja pliku/SBDProject2/files/: k  k.idx  k.overflow  o  o.idx  o.overflow
Indeksowo-sekwencyjna organizacja pliku/SBDProject2/src/main/java/: Isam.java  Main.java
Indeksowo-sekwencyjna organizacja pliku/SBDProject2/src/main/java/Entries/: Entry.java  Index.java  Record.java
Indeksowo-sekwencyjna organizacja pliku/SBDProject2/src/main/java/Files/: File.java  IndexFile.java  OverflowArea.java  PrimaryArea.java  RecordFile.java
Sortowanie pliku z użyciem wielkich buforów/: CMakeLists.txt  Config.h  FirstStage.c  FirstStage.h  GenerateFunctions.c  GenerateFunctions.h  HeapForBuffers.c  HeapForBuffers.h  HelpFunctions.c  HelpFunctions.h  QuickSortForBuffers.c  QuickSortForBuffers.h  RecordType.c  RecordType.h  Report.c  Report.h  SecondStage.c  SecondStage.h  SequentialFileAndBuffer.c  SequentialFileAndBuffer.h  StageMode.h  main.c
